test/libsolidity/syntaxTests/nameAndTypeResolution/175_uninitialized_const_variable.sol
contract Foo {
    uint const y;
}
// ----
// TypeError: (19-34): Uninitialized "const" variable.
